2001-06-07  Alex Samuel  <samuel@codesourcery.com>

	* qm/web.py (WebRequest.__init__): Copy client_address.
	* qm/fields.py (TimeField.GetDefaultValue): Use
	IntegerField.GetDefaultValue. 
	(TimeField.GetHelp): Use default_value attribute.
	* qm/track/issue.py (Issue.GetFieldAsText): New method.
	* qm/track/triggers/discussion.py (DiscussionTrigger.Preupdate):
	Use GetFieldAsText.
	* qm/track/triggers/notification.py
	(_NotifyTrigger.__MakeMessage): Likewise.

2001-06-07  Alex Samuel  <samuel@codesourcery.com>

	* qm/common.py (format_time): New function.
	(parse_time): Likewise.
	(timegm): Import or define here.
	* qm/fields.py (SetField.FormatValueAsHtml): Don't coerce to
	string here.
	(TimeField): Rewrite class.
	* tests/unit/common/format_time1.qmt: New test.
	* tests/unit/common/parse_time1.qmt: Likewise.
	* tests/unit/common/parse_time2.qmt: Likewise.
	* tests/unit/common/parse_time3.qmt: Likewise.
	* tests/unit/common/parse_time4.qmt: Likewise.
	
2001-06-07  Alex Samuel  <samuel@codesourcery.com>

	* qm/test/classes/python.py (ExecTest.Run): Add expression value
	to failing result.
	* qm/test/cmdline.py (Command.add_test_id): Get rsh program from rc.
	* qm/test/base.py (CommandFailedError): New class.
	(SubprocessEngine._Run): Catch it.
	(CommandEngine.RunTests): Raise it.
	(RshEngine._Run): Likewise.
	* share/tutorial/test/tdb/exec0.qmt: New file.
	* share/tutorial/test/tdb/exec1.qmt: Likewise.
	* share/tutorial/test/tdb/exec2.qmt: Likewise.
	* share/tutorial/test/tdb/test1.qmt: Remove.
	* share/tutorial/test/tdb/test2.qmt: Likewise.
	* share/tutorial/test/tdb/_classes/count.py: Add descriptions.
	* doc/manual/test-tour.xml: Rewrite completely.
	* doc/manual/test-reference.xml: Document some command-line stuff.
	* doc/manual/test-manual.xml: Major revisions and additions.
	* doc/qm.mod (fixme): New entity.

2001-06-06  Alex Samuel  <samuel@codesourcery.com>

	* doc/qm.mod (qmtest-cmd): New entity.
	(qmtrack-cmd): Likewise.