@@ -69,6 +69,7 @@
   </tbody>
  </table>
 
+ <dtml-var expr="GenerateEndBody()">
 </html>
 
 <dtml-comment><!-- 
